# RouterGym

./: .coveragerc  .env.example  .gitignore  README.md  project_structure.txt  pyproject.toml  pytest.ini  run_experiments.py  setup.ps1  setup.sh
RouterGym/: .env.template  README.md  __init__.py  label_space.py  requirements.txt
RouterGym/agents/: generator.py  llm_fallback.py  model_interface.py  slm_classify.py  slm_draft.py  slm_snippet.py
RouterGym/classification/: __init__.py  tfidf_classifier.py
RouterGym/classifiers/: __init__.py  encoder_centroids.npz  encoder_classifier.py  paths.py  slm_classifier.py  tfidf_classifier.py  utils.py
RouterGym/contracts/: json_contract.py  schema_contract.py  schemas.py
RouterGym/data/: __init__.py  dataset_loader.py  kb_loader.py
RouterGym/engines/: __init__.py  model_registry.py  vllm_local.py  vllm_remote.py
RouterGym/evaluation/: analyzer.py  metrics.py  stats.py
RouterGym/experiments/: __init__.py  config.yaml  run_agentic_eval.py  run_encoder_classification_only.py  run_grid.py
RouterGym/memory/: __init__.py  base.py  bm25.py  hybrid.py  none.py  rag.py  salience.py  transcript.py
RouterGym/plots/: publication_plots.py
RouterGym/prompts/: templates.yaml
RouterGym/results/: results.csv
RouterGym/routing/: __init__.py  base.py  classifier.py  hybrid_specialist.py  llm_first.py  router_core.py  router_engine.py  slm_dominant.py
RouterGym/scripts/: analyze_classifier_confidence.py  (+18 more)
scripts/: generate_project_structure.py
tools/: apply_new_kb_dump.py  run_ci_local.ps1  run_ci_local.sh
(+191 files in other folders)
